Updated default.css to fix modeswitch button showing up incorrectly on mobile devices
Button used to show up in roughly the center of the screen

--- a/default.css
+++ b/default.css
@@ -154,7 +154,7 @@ body {
 	background-image: url("moon.png");
 	padding: 5px;
 	position: fixed;
-	top: 865px;
+	bottom: 10px;
 	right: 10px;
 	cursor: default;
 }
